--- a/logstash.conf
+++ b/logstash.conf
@@ -28,9 +28,9 @@ filter {
     convert => { "hash" => "string" }
     }
 
-  #truncate {
-  #  length_bytes => 30000
-  #}
+  truncate {
+    length_bytes => 30000
+  }
 }
 
 output {
