--- a/logstash.conf
+++ b/logstash.conf
@@ -37,7 +37,8 @@ output {
   elasticsearch {
     hosts => "elasticsearch:9200"
     manage_template => false
-    index => "logstash-%{+YYYY.MM.dd}"
+    # index => "logstash-%{+YYYY.MM.dd}"
+    index => "logstash-index" # single index for easier experimenting
     document_type => "event"
   }
   stdout { codec => rubydebug }
